fix code based on JDK 11